--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Development Portfilio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/style/style.css">
   </head>
-  <body>
-    <header></header>
+  <body class="open-sans-normal font ">
+    <header>
+      <nav class="title">
+        <h3>
+          <span class="text-primary">B</span>ilash Mollick</h3>
+        <ul>
+          <li><a href="">Portfilo</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href=""><button>Hire Me</button></a></li>
+        </ul>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
