--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/style/style.css">
   </head>
   <body class="open-sans-normal font ">
-    <header class="heder">
+    <header class="heder secondary-bg">
       <nav class="title">
         <h3>
           <span class="text-primary">B</span>ilash</h3>
@@ -33,7 +33,33 @@
         <img class="banner-profile-pic" src="/images/hardy.png" alt="">
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about secondary-bg">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-descripation">
+          I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+        </p>
+        <div class="about-items">
+          <!-- .about-child-item*4>p.item-title+p.item-description -->
+          <div class="about-child-item">
+            <p class="item-title">Name:</p>
+            <p class="item-description">Bilash</p>                    
+          </div>
+          <div class="about-child-item">
+            <p class="item-title">Email:</p>
+            <p class="item-description">bilashmollick223@gmail.com</p>
+          </div>
+          <div class="about-child-item">
+            <p class="item-title">Date of birth:</p>
+            <p class="item-description">05 Febury 2002</p>
+          </div>
+          <div class="about-child-item">
+            <p class="item-title">From</p>
+            <p class="item-description">Narail, Bangladesh</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
