--- a/index.html
+++ b/index.html
@@ -86,9 +86,71 @@
             <h4 class="skill-title">MongoDB</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
           </div>
-
         </div>
       </section>
+      <!-- End Skill Section -->
+
+      <!-- Start Resume section -->
+       <section class="Resume">
+        <h3 class="section-title text-center">A summary of My Resume</h3>
+        <div class="Resume-continer">
+          <!-- .Resume-column*2>h3.Resume-column-title+.Experience*3>h4.Experience-title+h5.Experience-subtitle+.Experience-descripation+hr -->
+          <div class="Resume-column">
+            <h3 class="Resume-column-title">My Education</h3>
+            <div class="Experience">
+              <h4 class="Experience-title">Diploma in Computer         Engineering</h4>
+              <h5 class="Experience-subtitle">Magura polytechnic institute/ 2020 - 2021</h5>
+              <div class="Experience-descripation">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <hr>
+            </div>
+            <div class="Experience">
+              <h4 class="Experience-title">Diploma in Computer Engineering</h4>
+              <h5 class="Experience-subtitle">Magura polytechnic institute/ 2020 - 2021</h5>
+              <div class="Experience-descripation">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <hr>
+            </div>
+            <div class="Experience">
+              <h4 class="Experience-title">Diploma in Computer Engineering</h4>
+              <h5 class="Experience-subtitle">Magura polytechnic institute/ 2020 - 2021</h5>
+              <div class="Experience-descripation">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <hr>
+            </div>
+          </div>
+
+          <div class="Resume-column">
+            <h3 class="Resume-column-title">My Experience</h3>
+            <div class="Experience">
+              <h4 class="Experience-title">Sr. Font End Developer</h4>
+              <h5 class="Experience-subtitle">Apple Inc / 2020 - Current</h5>
+              <div class="Experience-descripation">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <hr>
+            </div>
+            <div class="Experience">
+              <h4 class="Experience-title">Jr. Font End Developer</h4>
+              <h5 class="Experience-subtitle">Dribbble Inc / 2018 - 2022</h5>
+              <div class="Experience-descripation">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <hr>
+            </div>
+            <div class="Experience">
+              <h4 class="Experience-title">HTML Developer</h4>
+              <h5 class="Experience-subtitle">Adobe Inc / 2017 - 2018</h5>
+              <div class="Experience-descripation">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+              <hr>
+            </div>
+          </div>
+
+        </div>
+        <div class="text-center">
+          <button class="btn-primary text-center Download-cv">Download My CV</button>
+        </div>
+       </section>
+<!-- End Resume section -->
     </main>
     <footer></footer>
   </body>
