--- a/index.html
+++ b/index.html
@@ -152,6 +152,28 @@
        </section>
 <!-- End Resume section -->
     </main>
-    <footer></footer>
+    <!-- start footer -->
+    <footer class="secondary-bg">
+      <div class="fouter-column ">
+        <h3 class="fouter-title-one">Lets Connect</h3>
+        <p class="fouter-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+     
+      <div>
+        <a href="https://web.facebook.com/?_rdc=1&_rdr#"><img src="images/icons/facebook.png" alt="" srcset=""></a>
+        <a href="https://www.instagram.com/#reactivated"><img src="images/icons/insta.png" alt="" srcset=""></a>
+        <a href="https://x.com/home"><img src="images/icons/twitter.png" alt="" srcset=""></a>
+      </div>
+    </div>
+      <div class="fouter-column">
+        <h3 class="fouter-title-two">Let’s Message me</h3>
+        <form action="">
+          <input type="text" name="" id="" placeholder="Your Name">
+          <input type="Email" name="" id="" placeholder="Your Email">
+          <textarea name="" id="" cols="30" rows="40" placeholder="Message"></textarea>
+          <input class="btn-primary" type="Submit" value="Submit">
+        </form>
+      </div>
+    </footer>
+    <!-- End footer -->
   </body>
 </html>
