--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
   </head>
   <body class="open-sans-normal font ">
     <header class="heder secondary-bg">
@@ -30,7 +30,7 @@
           <button class="btn-primary">Download CV</button>
           <button class="btn-primary">Contact</button>
         </div>
-        <img class="banner-profile-pic" src="/images/hardy.png" alt="">
+        <img class="banner-profile-pic" src="./images/hardy.png" alt="">
       </div>
     </header>
     <main>
@@ -67,22 +67,22 @@
         <div class="skill-continer">
           <!-- .skil*4>img+h4.skill-title+p.skill-description -->
           <div class="skill">
-            <img src="images/icons/js.png" alt="">
+            <img src="./images/icons/js.png" alt="">
             <h4 class="skill-title">Vanilla JavaScript</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
           </div>
           <div class="skill">
-            <img src="images/icons/react.png" alt="">
+            <img src="./images/icons/react.png" alt="">
             <h4 class="skill-title">React</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
           </div>
           <div class="skill">
-            <img src="images/icons/nodejs.png" alt="">
+            <img src="./images/icons/nodejs.png" alt="">
             <h4 class="skill-title">Node.js</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
           </div>
           <div class="skill">
-            <img src="images/icons/mongo.png" alt="">
+            <img src="./images/icons/mongo.png" alt="">
             <h4 class="skill-title">MongoDB</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
           </div>
@@ -159,9 +159,9 @@
         <p class="fouter-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
      
       <div>
-        <a href="https://web.facebook.com/?_rdc=1&_rdr#"><img src="images/icons/facebook.png" alt="" srcset=""></a>
-        <a href="https://www.instagram.com/#reactivated"><img src="images/icons/insta.png" alt="" srcset=""></a>
-        <a href="https://x.com/home"><img src="images/icons/twitter.png" alt="" srcset=""></a>
+        <a href="https://web.facebook.com/?_rdc=1&_rdr#"><img src="./images/icons/facebook.png" alt="" srcset=""></a>
+        <a href="https://www.instagram.com/#reactivated"><img src="./images/icons/insta.png" alt="" srcset=""></a>
+        <a href="https://x.com/home"><img src="./images/icons/twitter.png" alt="" srcset=""></a>
       </div>
     </div>
       <div class="fouter-column">
