create blog page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <span class="text-primary">B</span>ilash</h3>
         <ul>
           <li><a class="dark-two" href="">Portfilo</a></li>
-          <li><a class="dark-two" href="">Blog</a></li>
+          <li><a class="dark-two" href="blog.html">Blog</a></li>
           <li><a class="dark-two" href=""><button class="btn-primary">Hire Me</button></a></li>
         </ul>
       </nav>
